# labar

./: Cargo.toml  LICENSE  README.md
locales/: current_local.json
src/: audio.css  audio.rs  launcher.css  launcher.rs  locales.rs  main.rs  panel.rs  utils.rs  wayland.rs  wifi.css  wifi.rs
