[package]
name = "labar"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
gdk = { version = "0.18", package = "gdk" }
gio = "0.18"
glib = "0.18"
gtk-layer-shell = "0.8" 
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-backend = "0.3" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
chrono = "0.4" # For clock
signal-hook = "0.3" # For SIGUSR1 signal handling
pango = "0.18"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
memmap2 = "0.9.9"
xkbcommon = { version = "0.9.0", features = ["wayland"] }

[build-dependencies]

